css/quiz.css
:root {
  --primary-color: #0083da;
  --primary-highlight-color: #056fb6;
  --primary-text-color: #000000;
  --background-color: #ffffff;
  --background-color2: #97cfec;
  --second-bg-color: rgb(244, 244, 244);
  --wrong-choice-color: red;
  --wrong-choice-color2: rgb(255, 231, 231);
  --correct-choice-color: green;
  --correct-choice-color2: rgb(164, 238, 201);
}

:root[data-theme='dark'],
:root[data-force-color-mode="dark"] {
  --primary-color: #4a6572;
  --background-color: #eeeeee;
  --second-bg-color: #dddddd;
}

body {
  background-color: var(--background-color);
  color: var(--primary-text-color);
}

.quiz-title {
  font-weight: 400;
  font-size: 20px;
  line-height: 22px;
  margin-top: 20px;
  margin-bottom: 5px;
}

.quiz-question-content {
  display: flex;
  flex-flow: column;
  gap: 10px;
}

.quiz-question-content.open-ended {
  flex-flow: row;
}

.quiz-question-content input.answer {
  flex: 3 1 0%;
  border: none;
  border-radius: 4px;
  padding: 10px;
  background: var(--second-bg-color);
}

.quiz-question-content input.answer:focus {
  border: none !important;
}

.quiz-question-content button.check {
  border: none;
  border-radius: 4px;
  min-height: 30px;
  background-color: var(--primary-color);
  flex-grow: 1;
  max-width: 40%;
  cursor: pointer;
  color: var(--background-color);
  font-size: 14px;
  font-weight: 600;
}

.quiz-question-content button.check:hover {
  background: var(--primary-highlight-color);
}

.quiz-question-content button.check:active {
  transform: translateY(1px);
}

input[type="radio"],
input[type="checkbox"] {
  font: inherit;
  width: 1em;
  height: 1em;
  border: 0.15em solid currentColor;
  border-radius: 0.15em;
  transform: translateY(-0.075em);
  place-content: center;
  vertical-align: middle;
  position: relative;
  z-index: 1;
  margin: 15px;
  /* I am not happy with this solution, but putting checkbox inside of the 
 label, prevents checkbox:checked ~ .control-label from working. */
  margin-bottom: -45px;
  display: none;
}

input[type="checkbox"]:checked::before {
  transform: scale(1);
}

.control-label {
  box-shadow: none;
  font-size: 1em;
  display: flex;
  vertical-align: middle;
  border: var(--second-bg-color) solid 1px;
  border-radius: 4px;
  background: var(--second-bg-color);
  padding: 10px;
  /* padding-left: 50px; */
  cursor: pointer;
  font-weight: 400;
}

.control-label:hover {
  border: 1px solid var(--primary-color);
  background: var(--background-color2);
}

input[type="checkbox"]:checked~.control-label,
input[type="radio"]:checked~.control-label {
  font-weight: 600;
  transform: scale(1);
  transition: 520ms transform ease-in-out;
  border: 1px solid var(--primary-color);
}

.no-select {
  user-select: none;
}

.post-content {
  display: flex;
  flex-direction: column;
}

.font-medium {
  font-weight: 500;
}

.font-semibold {
  font-weight: 600;
}

.wrong-choice {
  color: var(--wrong-choice-color);
  background: var(--wrong-choice-color2);
}

.correct-choice {
  color: var(--correct-choice-color);
  background: var(--correct-choice-color2);
}

.chosen-choice {
  border: currentColor solid 1px !important;
  border-radius: 4px;
}

.question-description {
  color: gray;
  font-size: 14px;
}

